--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -2,7 +2,8 @@
 requires = [
   #"setuptools>=58; python_version<'3.12'",
   #"wheel>=0.37; python_version<'3.12'",
-  "setuptools==67.6.1",
+  "setuptools==67.6.1; python_version<'3.9'",
+  "setuptools>=68.2.1; python_version>='3.9'",
   "wheel>=0.37",
   "numpy>=1.14.5,<2.1.3",
   "cmake==3.31.1",
