--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,11 +1,23 @@
 [build-system]
-  requires = [
-    "setuptools>=58",
-    "wheel>=0.37",
-    "numpy>=1.14.5,<2.1.3",
-    "cmake==3.31.1",
-    "swig==4.1.1",
-  ]
+requires = [
+  "setuptools>=58",
+  "wheel>=0.37",
+  "numpy>=1.14.5,<2.1.3",
+  "cmake==3.31.1",
+  "swig==4.1.1",
+]
+
+
+#requires = [
+#  #"setuptools>=58; python_version<'3.12'",
+#  #"wheel>=0.37; python_version<'3.12'",
+#  "setuptools==67.6.1; python_version<'3.9'",
+#  "setuptools>=68.2.1; python_version>='3.9'",
+#  "wheel>=0.37",
+#  "numpy>=1.14.5,<2.1.3",
+#  "cmake==3.31.1",
+#  "swig==4.1.1",
+#]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
@@ -13,12 +25,13 @@ build-frontend = "pip"
 build-verbosity = 1
 
 [tool.cibuildwheel.windows]
-before-test = "python -m pip install -r {project}\\requirements.txt"
+before-test = "python -m pip install -r {project}\\requirements.txt -r {project}\\requirements_dev.txt"
 test-command = "python {package}\\..\\bindings\\python\\tests\\test_python_bindings.py"
 
 [tool.cibuildwheel.linux]
 environment-pass = ["CI_BUILD_CMAKE_ARGS", "CI_PIP_CACHE_DIR"]
 before-build = [
+  #"python -m pip install --cache-dir /ci/pip_cache --prefer-binary -r {project}/requirements.txt -r {project}/requirements_dev.txt",
   "rm -rf {project}/python/build/temp*",
   "export PYVER=$(python -c \"import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')\")",
   "export ABITAG=$(python -c \"import sys; cp=f'cp{sys.version_info.major}{sys.version_info.minor}'; print(f'{cp}-{cp}{sys.abiflags}')\")",
