--- a/storages/python/tests-python/CMakeLists.txt
+++ b/storages/python/tests-python/CMakeLists.txt
@@ -78,6 +78,8 @@ foreach(test ${python-tests})
   set_property(TEST ${test} APPEND PROPERTY
     ENVIRONMENT "LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH_NATIVE}")
   endif()
+  set_property(TEST ${name} APPEND PROPERTY
+    ENVIRONMENT "DLITE_IMPORTSKIP_EXITCODE=$ENV{DLITE_IMPORTSKIP_EXITCODE}")
 
   # Skip tests that exit with return code 44
   set_property(TEST ${test} PROPERTY SKIP_RETURN_CODE 44)
